# BrayaBrowser

./: .SRCINFO  .gitignore  AUR_SETUP_COMPLETE.md  BETA6_RELEASE_NOTES.md  BETA7_RELEASE_NOTES.md  BETA_RELEASES.md  BOOKMARKS_COMPLETE.md  BOOKMARKS_FIXED.md  BOOKMARKS_FIX_PLAN.md  BOOKMARKS_MANAGEMENT.md  BOOKMARKS_TESTING.md  BUILD_INSTALL.md  BUTTON_FIX_COMPLETE.md  CEF_OPTION_ANALYSIS.md  CHANGELOG.md  CMakeLists.txt  CODE_ISSUES.md  CRASH_ANALYSIS.md  CRASH_FIX.md  CRASH_FIXES_APPLIED.md  CURRENT_ISSUES.md  CURRENT_STATUS.md  DOWNLOAD_FIX.md  END_OF_DAY_STATUS.md  EXPLORATION_RESULTS.md  EXTENSION_DESIGN.md  EXTENSION_INSTALLATION.md  EXTENSION_MESSAGING_PLAN.md  EXTENSION_TODO.md  FEATURE_2_PLAN.md  FEATURE_3_PLAN.md  FEATURE_4_PLAN.md  FEATURE_ROADMAP.md  FINAL_FIXES_COMPLETE.md  FINAL_STATUS.md  FIXES_APPLIED.md  GAME_PLAN.md  GECKO_MIGRATION_PLAN.md  GECKO_RESEARCH_FINDINGS.md  ICON_FIX_SUMMARY.md  (+89 more)
docs/archive/: ADBLOCK-PLAN.md  CLEANUP_COMPLETE.md  NEXT_SESSION_PLAN.md  SESSION_SUMMARY_2025-11-13.md  VERSION_1.0.1_PLAN.md
docs/beta-releases/: BETA10_RELEASE_NOTES.md  BETA8_RELEASE_NOTES.md  BETA9_RELEASE_NOTES.md
docs/technical/: BITWARDEN_SETUP.md  FIXES_APPLIED.md  PASSWORD_AUTOFILL_IMPROVEMENTS.md  QUICK_SUMMARY.md
extensions/hello-world/: background.js  content.js  manifest.json  popup.html
prototype/: CMakeLists.txt  FINDINGS.md  README.md  cef-hello.cpp
repo/: summary  summary.idx
repo/refs/heads/app/dev.braya.BrayaBrowser/x86_64/: master
repo/refs/heads/appstream/: x86_64
repo/refs/heads/appstream2/: x86_64
repo/refs/heads/runtime/dev.braya.BrayaBrowser.Debug/x86_64/: master
repo/summaries/: c3077b7556531a6cf3f5e5730fd680f27398642c3de2c0826e7419ed1ae746d7-0071251186952ad408cabe23498b453cf09704b5d0ac190ef465980f2bbbabba.delta
resources/: eff-wordlist-short.txt  extension-detector.js  home.html  password-detect.js  style.css  tab-close-fix.css  theme-dark.css  theme-industrial.css  theme-light.css
src/: BrayaBookmarkIO.cpp  BrayaBookmarkIO.h  BrayaBookmarks.cpp  BrayaBookmarks.h  BrayaCommandPalette.cpp  BrayaCommandPalette.h  BrayaCustomization.cpp  BrayaCustomization.h  BrayaDownloads.cpp  BrayaDownloads.h  BrayaHistory.cpp  BrayaHistory.h  BrayaPasswordManager.cpp  BrayaPasswordManager.h  BrayaPasswordManager_Extensions.cpp  BrayaSettings.cpp  BrayaSettings.cpp.old  BrayaSettings.h  BrayaTab.cpp  BrayaTab.h  BrayaWindow.cpp  BrayaWindow.h  GObjectPtr.h  TabGroup.cpp  TabGroup.h  main.cpp
src/adblocker/: BrayaAdBlocker.cpp  BrayaAdBlocker.h
src/extensions/: BackgroundPageRunner.cpp  BackgroundPageRunner.h  BrayaExtensionAPI.cpp  BrayaExtensionAPI.h  BrayaExtensionManager.cpp  BrayaExtensionManager.h  BrayaWebExtension.cpp  BrayaWebExtension.h  ExtensionInstaller.cpp  ExtensionInstaller.h
src/extensions/web-extension/: BrayaWebExtension.cpp
